--- a/index.html
+++ b/index.html
@@ -2,36 +2,64 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+          integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
+<header class="header">
 
-        <div class="menu-header">
-            <i class="manu-bar fa fa-bars" style="display: none"></i>
-            <a href="#" class="title-header">Mua nhà</a>
-            <a href="#" class="title-header">Thuê nhà</a>
-            <a href="#" class="title-header">Khám Phá</a>
-            <a href="#" class="title-header">Blog</a>
-        </div>
-        <div class="image-div">
-            <img src="images/logo.png" class="logo-header">
-        </div>
-        <div class="button-h">
-            <img src="images/heart.png" class="heart-image">
+    <div class="menu-header" style="padding-left: 55px">
+        <i class="manu-bar fa fa-bars" style="display: none"></i>
+        <a href="#" class="title-header">Mua nhà</a>
+        <a href="#" class="title-header">Thuê nhà</a>
+        <a href="#" class="title-header">Khám Phá</a>
+        <a href="#" class="title-header" style="border-bottom-style: solid;border-bottom-color: #D93C23 ; opacity: 1">Blog</a>
+    </div>
+    <div class="image-div">
+        <img src="images/logo.png" class="logo-header" alt="logo">
+    </div>
+    <!--    <div class="button-h">-->
+    <!--        <img src="images/dot.png" class="dot-image" alt="dot">-->
+    <!--        <img src="images/heart.png" class="heart-image" alt="heart">-->
+    <!--        <button class="button-header">Đăng bài</button>-->
+    <!--    </div>-->
+    <div class="user-header">
+        <div class="btn-upload">
+            <img src="images/dot.png" class="dot-image" alt="dot">
+            <img src="images/heart.png" class="heart-image" alt="heart">
             <button class="button-header">Đăng bài</button>
         </div>
-        <div class="user-header">
-            <img src="images/user.JPG" class="image-header">
+        <div class="user">
             <div class="name-header">
                 <p class="name-user">Nguyễn Đình Phong</p>
                 <p class="permisstion-user">Mentor</p>
             </div>
+            <img src="images/user.JPG" class="image-header" alt="user">
         </div>
-    </header>
+    </div>
+</header>
+<div class="slider">
+    <div class="slide">
+        <img src="images/titleheading.png" class="tieuDe">
+        <img src="images/silder-content.png" class="noiDung">
+    </div>
+</div>
+<div class="content">
+    <a class="navbar-content color-green-dark" style="border-radius: 25px;color: aliceblue;">Tất cả</a>
+    <a class="navbar-content">Xã hội</a>
+    <a class="navbar-content">Nhà đất</a>
+    <a class="navbar-content">Đời sống</a>
+    <a class="navbar-content">Video</a>
+</div>
 </body>
 </html>
