--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
+    <title>Review nhà</title>
 </head>
 <body>
 <header class="header">
@@ -28,11 +33,6 @@
     <div class="image-div">
         <img src="images/logo.png" class="logo-header" alt="logo">
     </div>
-    <!--    <div class="button-h">-->
-    <!--        <img src="images/dot.png" class="dot-image" alt="dot">-->
-    <!--        <img src="images/heart.png" class="heart-image" alt="heart">-->
-    <!--        <button class="button-header">Đăng bài</button>-->
-    <!--    </div>-->
     <div class="user-header">
         <div class="btn-upload">
             <img src="images/dot.png" class="dot-image" alt="dot">
@@ -60,6 +60,75 @@
     <a class="navbar-content">Nhà đất</a>
     <a class="navbar-content">Đời sống</a>
     <a class="navbar-content">Video</a>
+</div>
+<div>
+    <div class="tintuc">
+        <div class="tintuc-img-content">
+            <img src="images/tintuc/tintuc.png" class="tintuc-img">
+            <p class="tintuc-content">Tin tức</p>
+        </div>
+    </div>
+    <div class="content-tintuc">
+        <a href="#" class="content-tintuc-l">
+            <img src="images/tintuc/img1.png" class="content-tintuc-l-img">
+            <p class="content-tintuc-content">Making a Housing Wage: Where Teachers, First Responders and Restaurant
+                Workers Can Live Where They Work</p>
+            <div class="content-tintuc-l-des">
+                <p class="content-tintuc-xahoi">Xã hội</p>
+                <p class="content-tintuc-dot"></p>
+                <p class="content-tintuc-name">Quang Anh Trần</p>
+                <p class="content-tintuc-dot"></p>
+                <p class="content-tintuc-des">24/02/2020</p>
+            </div>
+            <p class="content-tintuc-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat
+                purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id
+                vitae...</p>
+        </a>
+        <div class="content-tintuc-r">
+            <a href="#" class="content-tintuc-r-mini">
+                <img class="content-tintuc-r-img" src="images/tintuc/img2.png">
+                <p class="content-tintuc-content">Making a Housing Wage: Where Restaurant Workers Can They Work</p>
+                <div class="content-tintuc-r-des">
+                    <p class="content-tintuc-xahoi">Xã hội</p>
+                    <p class="content-tintuc-dot"></p>
+                    <p class="content-tintuc-name">Quang Anh Trần</p>
+                    <p class="content-tintuc-dot"></p>
+                    <p class="content-tintuc-des">24/02/2020</p>
+                </div>
+            </a>
+            <a href="#" class="content-tintuc-r-mini">
+                <img class="content-tintuc-r-img" src="images/tintuc/img3.png">
+                <p class="content-tintuc-content">Making a Housing Wage: Where Restaurant Workers Can They Work</p>
+                <div class="content-tintuc-r-des">
+                    <p class="content-tintuc-xahoi">Xã hội</p>
+                    <p class="content-tintuc-dot"></p>
+                    <p class="content-tintuc-name">Quang Anh Trần</p>
+                    <p class="content-tintuc-dot"></p>
+                    <p class="content-tintuc-des">24/02/2020</p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="content-video">
+        <div class="content-video-title">
+            <p class="content-video-title-v">Video</p>
+            <p class="content-video-title-all">Xem tất cả</p>
+        </div>
+        <div class="content-video-video">
+            <a href="#" class="content-video-video-l">
+                <img src="images/video/video1.png" class="content-video-video-l-video">
+            </a>
+            <div class="content-video-video-r">
+                <img src="images/video/video2.png" class="content-video-video-r-video">
+                <p class="content-video-video-r-content">Making a Housing Wage: Where  Restaurant should l...</p>
+                <div class="content-video-video-r-des">
+                    <p class="content-video-video-r-view">5542 lượt xem</p>
+                    <p class="content-tintuc-dot"></p>
+                    <p class="content-video-video-r-des">24/02/2020</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
