--- a/index.html
+++ b/index.html
@@ -115,17 +115,46 @@
             <p class="content-video-title-all">Xem tất cả</p>
         </div>
         <div class="content-video-video">
-            <a href="#" class="content-video-video-l">
-                <img src="images/video/video1.png" class="content-video-video-l-video">
-            </a>
+            <div class="content-video-video-tamgiac">
+                <a href="#" class="content-video-video-l">
+                    <div class="content-video-video-l-heart">
+                        <img src="images/video/heart.png" class="content-video-video-l-heart-img">
+                    </div>
+                    <div class="content-video-video-l-tron-div">
+                        <div class="content-video-video-l-tron">
+                            <img src="images/video/tamgiac.png" class="content-video-video-l-video">
+                        </div>
+                    </div>
+                    <div class="content-video-video-l-des">
+                        <p class="content-video-video-l-des-text">Đi dạo cạnh đường cao tốc Pháp Vân Cầu Giẽ ổn
+                            không?</p>
+                        <div class="content-video-video-l-des-viewdate">
+                            <p class="content-video-video-l-des-view">5542 lượt xem</p>
+                            <p class="content-tintuc-dot"></p>
+                            <p class="content-video-video-l-des-date">24/02/2020</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <div class="content-video-video-r">
-                <img src="images/video/video2.png" class="content-video-video-r-video">
-                <p class="content-video-video-r-content">Making a Housing Wage: Where  Restaurant should l...</p>
-                <div class="content-video-video-r-des">
-                    <p class="content-video-video-r-view">5542 lượt xem</p>
-                    <p class="content-tintuc-dot"></p>
-                    <p class="content-video-video-r-des">24/02/2020</p>
-                </div>
+                <a href="#">
+                    <img src="images/video/video2.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-des">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <img src="images/video/video3.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-des">24/02/2020</p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
