--- a/index.html
+++ b/index.html
@@ -130,14 +130,17 @@
                             không?</p>
                         <div class="content-video-video-l-des-viewdate">
                             <p class="content-video-video-l-des-view">5542 lượt xem</p>
-                            <p class="content-tintuc-dot"></p>
+                            <p class="content-tintuc-dot" style="background-color: aliceblue"></p>
                             <p class="content-video-video-l-des-date">24/02/2020</p>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="content-video-video-r">
-                <a href="#">
+                <a href="#" class="content-video-video-r-r">
+<!--                    <div class="content-video-video-l-heart">-->
+<!--                        <img src="images/video/heart.png" class="content-video-video-l-heart-img">-->
+<!--                    </div>-->
                     <img src="images/video/video2.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
@@ -152,9 +155,71 @@
                     <div class="content-video-video-r-des">
                         <p class="content-video-video-r-view">5542 lượt xem</p>
                         <p class="content-tintuc-dot"></p>
-                        <p class="content-video-video-r-des">24/02/2020</p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
                     </div>
                 </a>
+            </div>
+        </div>
+        <div class="content-video-list">
+            <p class="content-video-list-title">Danh sách tin</p>
+            <div class="content-video-list-content">
+                <img src="images/list/img1.png" class="content-video-list-content-img">
+                <div class="content-video-list-content-des">
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First Responders and Restaurant Workers Can Live Where They Work</p>
+                    <div class="content-video-list-content-des-information">
+                        <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-name">Quang Anh Trần</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-date">24/02/2020</p>
+                    </div>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id vitae...</p>
+                </div>
+            </div>
+            <div class="content-video-list-content">
+                <img src="images/list/img2.png" class="content-video-list-content-img">
+                <div class="content-video-list-content-des">
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First Responders and Restaurant Workers Can Live Where They Work</p>
+                    <div class="content-video-list-content-des-information">
+                        <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-name">Quang Anh Trần</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-date">24/02/2020</p>
+                    </div>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id vitae...</p>
+                </div>
+            </div>
+            <div class="content-video-list-content">
+                <img src="images/list/img3.png" class="content-video-list-content-img">
+                <div class="content-video-list-content-des">
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First Responders and Restaurant Workers Can Live Where They Work</p>
+                    <div class="content-video-list-content-des-information">
+                        <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-name">Quang Anh Trần</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-date">24/02/2020</p>
+                    </div>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id vitae...</p>
+                </div>
+            </div>
+            <div class="content-video-list-content">
+                <img src="images/list/img4.png" class="content-video-list-content-img">
+                <div class="content-video-list-content-des">
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First Responders and Restaurant Workers Can Live Where They Work</p>
+                    <div class="content-video-list-content-des-information">
+                        <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-name">Quang Anh Trần</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-list-content-des-information-date">24/02/2020</p>
+                    </div>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id vitae...</p>
+                </div>
+            </div>
+            <div class="content-video-list-xemthem">
+                <a href="#" class="content-video-list-xemthem-a">Xem thêm</a>
             </div>
         </div>
     </div>
