--- a/index.html
+++ b/index.html
@@ -158,6 +158,24 @@
                         <p class="content-video-video-r-date">24/02/2020</p>
                     </div>
                 </a>
+                <a href="#" class="content-video-video-r-r">
+                    <img src="images/video/video2.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="#" class="content-video-video-r-r">
+                    <img src="images/video/video3.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="content-video-list">
