--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                     <p class="content-tintuc-dot"></p>
                     <p class="content-tintuc-des">24/02/2020</p>
                 </div>
+                <p class="content-tintuc-des-r" style="display: none">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat
+                    purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id
+                    vitae...</p>
             </a>
             <a href="#" class="content-tintuc-r-mini">
                 <img class="content-tintuc-r-img" src="images/tintuc/img3.png">
@@ -106,6 +109,9 @@
                     <p class="content-tintuc-dot"></p>
                     <p class="content-tintuc-des">24/02/2020</p>
                 </div>
+                <p class="content-tintuc-des-r" style="display: none">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat
+                    purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id
+                    vitae...</p>
             </a>
         </div>
     </div>
@@ -138,9 +144,6 @@
             </div>
             <div class="content-video-video-r">
                 <a href="#" class="content-video-video-r-r">
-<!--                    <div class="content-video-video-l-heart">-->
-<!--                        <img src="images/video/heart.png" class="content-video-video-l-heart-img">-->
-<!--                    </div>-->
                     <img src="images/video/video2.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
@@ -149,7 +152,7 @@
                         <p class="content-video-video-r-date">24/02/2020</p>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#" class="content-video-video-r-r">
                     <img src="images/video/video3.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
@@ -160,6 +163,33 @@
                 </a>
                 <a href="#" class="content-video-video-r-r">
                     <img src="images/video/video2.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="#" class="content-video-video-r-r">
+                    <img src="images/video/video3.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="#" class="content-video-video-r-r">
+                    <img src="images/video/video3.png" class="content-video-video-r-video">
+                    <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
+                    <div class="content-video-video-r-des">
+                        <p class="content-video-video-r-view">5542 lượt xem</p>
+                        <p class="content-tintuc-dot"></p>
+                        <p class="content-video-video-r-date">24/02/2020</p>
+                    </div>
+                </a>
+                <a href="#" class="content-video-video-r-r">
+                    <img src="images/video/video3.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
                         <p class="content-video-video-r-view">5542 lượt xem</p>
