--- a/index.html
+++ b/index.html
@@ -22,13 +22,31 @@
 </head>
 <body>
 <header class="header">
-
     <div class="menu-header" style="padding-left: 55px">
         <i class="manu-bar fa fa-bars" style="display: none"></i>
         <a href="#" class="title-header">Mua nhà</a>
         <a href="#" class="title-header">Thuê nhà</a>
         <a href="#" class="title-header">Khám Phá</a>
         <a href="#" class="title-header" style="border-bottom-style: solid;border-bottom-color: #D93C23 ; opacity: 1">Blog</a>
+    </div>
+    <div class="btn-menu-header" style="list-style: none">
+        <ul class="btn-menu-header-ul">
+            <li><i id="btnCloseHeader" class="fa fa-times"></i>
+                <img src="images/logo.png" class="logo-header-button">
+            </li>
+            <li class="btn-menu-header-li-active"><a href="#" class="btn-menu-header-li-active">Mua nhà</a>
+            </li>
+            <li class="btn-menu-header-li"><a href="#" class="btn-menu-header-li">Thuê nhà</a></li>
+            <li class="btn-menu-header-li"><a href="#" class="btn-menu-header-li">Khám phá</a></li>
+            <li class="btn-menu-header-li"><a href="#" class="btn-menu-header-li">Blog</a></li>
+            <li class="btn-menu-header-li-upload">
+                <a href="#" class="btn-menu-header-li-upload-a">Đăng bài</a>
+            </li>
+            <li class="btn-menu-header-li-loginre">
+                <a class="btn-menu-header-li-loginre-login" href="#">Đăng nhập</a>
+                <a href="#" class="btn-menu-header-li-loginre-re">Đăng ký</a>
+            </li>
+        </ul>
     </div>
     <div class="image-div">
         <img src="images/logo.png" class="logo-header" alt="logo">
@@ -95,7 +113,8 @@
                     <p class="content-tintuc-dot"></p>
                     <p class="content-tintuc-des">24/02/2020</p>
                 </div>
-                <p class="content-tintuc-des-r" style="display: none">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat
+                <p class="content-tintuc-des-r" style="display: none">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Sit diam at feugiat
                     purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id
                     vitae...</p>
             </a>
@@ -109,7 +128,8 @@
                     <p class="content-tintuc-dot"></p>
                     <p class="content-tintuc-des">24/02/2020</p>
                 </div>
-                <p class="content-tintuc-des-r" style="display: none">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat
+                <p class="content-tintuc-des-r" style="display: none">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Sit diam at feugiat
                     purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id
                     vitae...</p>
             </a>
@@ -213,7 +233,8 @@
             <div class="content-video-list-content">
                 <img src="images/list/img1.png" class="content-video-list-content-img">
                 <div class="content-video-list-content-des">
-                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First Responders and Restaurant Workers Can Live Where They Work</p>
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
+                        Responders and Restaurant Workers Can Live Where They Work</p>
                     <div class="content-video-list-content-des-information">
                         <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
                         <p class="content-tintuc-dot"></p>
@@ -221,13 +242,16 @@
                         <p class="content-tintuc-dot"></p>
                         <p class="content-video-list-content-des-information-date">24/02/2020</p>
                     </div>
-                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id vitae...</p>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
+                        lorem. Libero mi velit id vitae...</p>
                 </div>
             </div>
             <div class="content-video-list-content">
                 <img src="images/list/img2.png" class="content-video-list-content-img">
                 <div class="content-video-list-content-des">
-                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First Responders and Restaurant Workers Can Live Where They Work</p>
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
+                        Responders and Restaurant Workers Can Live Where They Work</p>
                     <div class="content-video-list-content-des-information">
                         <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
                         <p class="content-tintuc-dot"></p>
@@ -235,13 +259,16 @@
                         <p class="content-tintuc-dot"></p>
                         <p class="content-video-list-content-des-information-date">24/02/2020</p>
                     </div>
-                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id vitae...</p>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
+                        lorem. Libero mi velit id vitae...</p>
                 </div>
             </div>
             <div class="content-video-list-content">
                 <img src="images/list/img3.png" class="content-video-list-content-img">
                 <div class="content-video-list-content-des">
-                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First Responders and Restaurant Workers Can Live Where They Work</p>
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
+                        Responders and Restaurant Workers Can Live Where They Work</p>
                     <div class="content-video-list-content-des-information">
                         <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
                         <p class="content-tintuc-dot"></p>
@@ -249,13 +276,16 @@
                         <p class="content-tintuc-dot"></p>
                         <p class="content-video-list-content-des-information-date">24/02/2020</p>
                     </div>
-                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id vitae...</p>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
+                        lorem. Libero mi velit id vitae...</p>
                 </div>
             </div>
             <div class="content-video-list-content">
                 <img src="images/list/img4.png" class="content-video-list-content-img">
                 <div class="content-video-list-content-des">
-                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First Responders and Restaurant Workers Can Live Where They Work</p>
+                    <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
+                        Responders and Restaurant Workers Can Live Where They Work</p>
                     <div class="content-video-list-content-des-information">
                         <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
                         <p class="content-tintuc-dot"></p>
@@ -263,7 +293,9 @@
                         <p class="content-tintuc-dot"></p>
                         <p class="content-video-list-content-des-information-date">24/02/2020</p>
                     </div>
-                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id vitae...</p>
+                    <p class="content-video-list-content-des-des">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
+                        lorem. Libero mi velit id vitae...</p>
                 </div>
             </div>
             <div class="content-video-list-xemthem">
@@ -274,3 +306,16 @@
 </div>
 </body>
 </html>
+<script>
+    const btn = document.querySelector(".manu-bar");
+    const menu = document.querySelector(".btn-menu-header");
+    const btnClose = document.querySelector("#btnCloseHeader");
+
+    btn.onclick = function(){
+        menu.style.display = "block";
+    }
+
+    btnClose.onclick = function(){
+        menu.style.display = "none";
+    }
+</script>
