--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     </div>
 </div>
 <div class="content">
-    <a class="navbar-content color-green-dark" style="border-radius: 25px;color: aliceblue;">Tất cả</a>
-    <a class="navbar-content">Xã hội</a>
-    <a class="navbar-content">Nhà đất</a>
-    <a class="navbar-content">Đời sống</a>
-    <a class="navbar-content">Video</a>
+    <a class="navbar-content color-green-dark" href="/" style="border-radius: 25px;color: aliceblue;">Tất cả</a>
+    <a class="navbar-content" href="xahoi.html">Xã hội</a>
+    <a class="navbar-content" href="xahoi.html">Nhà đất</a>
+    <a class="navbar-content" href="xahoi.html">Đời sống</a>
+    <a class="navbar-content" href="xahoi.html">Video</a>
 </div>
 <div>
     <div class="tintuc">
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="content-tintuc">
-        <a href="#" class="content-tintuc-l">
+        <a href="detail.html" class="content-tintuc-l">
             <img src="images/tintuc/img1.png" class="content-tintuc-l-img">
             <p class="content-tintuc-content">Making a Housing Wage: Where Teachers, First Responders and Restaurant
                 Workers Can Live Where They Work</p>
@@ -103,7 +103,7 @@
                 vitae...</p>
         </a>
         <div class="content-tintuc-r">
-            <a href="#" class="content-tintuc-r-mini">
+            <a href="detail.html" class="content-tintuc-r-mini">
                 <img class="content-tintuc-r-img" src="images/tintuc/img2.png">
                 <p class="content-tintuc-content">Making a Housing Wage: Where Restaurant Workers Can They Work</p>
                 <div class="content-tintuc-r-des">
@@ -118,7 +118,7 @@
                     purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam lorem. Libero mi velit id
                     vitae...</p>
             </a>
-            <a href="#" class="content-tintuc-r-mini">
+            <a href="detail.html" class="content-tintuc-r-mini">
                 <img class="content-tintuc-r-img" src="images/tintuc/img3.png">
                 <p class="content-tintuc-content">Making a Housing Wage: Where Restaurant Workers Can They Work</p>
                 <div class="content-tintuc-r-des">
@@ -142,7 +142,7 @@
         </div>
         <div class="content-video-video">
             <div class="content-video-video-tamgiac">
-                <a href="#" class="content-video-video-l">
+                <a href="detail.html" class="content-video-video-l">
                     <div class="content-video-video-l-heart">
                         <img src="images/video/heart.png" class="content-video-video-l-heart-img">
                     </div>
@@ -163,7 +163,7 @@
                 </a>
             </div>
             <div class="content-video-video-r">
-                <a href="#" class="content-video-video-r-r">
+                <a href="detail.html" class="content-video-video-r-r">
                     <img src="images/video/video2.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
@@ -172,7 +172,7 @@
                         <p class="content-video-video-r-date">24/02/2020</p>
                     </div>
                 </a>
-                <a href="#" class="content-video-video-r-r">
+                <a href="detail.html" class="content-video-video-r-r">
                     <img src="images/video/video3.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
@@ -181,7 +181,7 @@
                         <p class="content-video-video-r-date">24/02/2020</p>
                     </div>
                 </a>
-                <a href="#" class="content-video-video-r-r">
+                <a href="detail.html" class="content-video-video-r-r">
                     <img src="images/video/video2.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
@@ -190,7 +190,7 @@
                         <p class="content-video-video-r-date">24/02/2020</p>
                     </div>
                 </a>
-                <a href="#" class="content-video-video-r-r">
+                <a href="detail.html" class="content-video-video-r-r">
                     <img src="images/video/video3.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
@@ -199,7 +199,7 @@
                         <p class="content-video-video-r-date">24/02/2020</p>
                     </div>
                 </a>
-                <a href="#" class="content-video-video-r-r">
+                <a href="detail.html" class="content-video-video-r-r">
                     <img src="images/video/video3.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
@@ -208,7 +208,7 @@
                         <p class="content-video-video-r-date">24/02/2020</p>
                     </div>
                 </a>
-                <a href="#" class="content-video-video-r-r">
+                <a href="detail.html" class="content-video-video-r-r">
                     <img src="images/video/video3.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
@@ -217,7 +217,7 @@
                         <p class="content-video-video-r-date">24/02/2020</p>
                     </div>
                 </a>
-                <a href="#" class="content-video-video-r-r">
+                <a href="detail.html" class="content-video-video-r-r">
                     <img src="images/video/video3.png" class="content-video-video-r-video">
                     <p class="content-video-video-r-content">Making a Housing Wage: Where Restaurant should l...</p>
                     <div class="content-video-video-r-des">
@@ -230,7 +230,7 @@
         </div>
         <div class="content-video-list">
             <p class="content-video-list-title">Danh sách tin</p>
-            <div class="content-video-list-content">
+            <a class="content-video-list-content" href="detail.html">
                 <img src="images/list/img1.png" class="content-video-list-content-img">
                 <div class="content-video-list-content-des">
                     <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -246,8 +246,8 @@
                         elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                         lorem. Libero mi velit id vitae...</p>
                 </div>
-            </div>
-            <div class="content-video-list-content">
+            </a>
+            <a class="content-video-list-content" href="detail.html">
                 <img src="images/list/img2.png" class="content-video-list-content-img">
                 <div class="content-video-list-content-des">
                     <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -263,8 +263,8 @@
                         elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                         lorem. Libero mi velit id vitae...</p>
                 </div>
-            </div>
-            <div class="content-video-list-content">
+            </a>
+            <a class="content-video-list-content" href="detail.html">
                 <img src="images/list/img3.png" class="content-video-list-content-img">
                 <div class="content-video-list-content-des">
                     <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -280,8 +280,8 @@
                         elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                         lorem. Libero mi velit id vitae...</p>
                 </div>
-            </div>
-            <div class="content-video-list-content">
+            </a>
+            <a class="content-video-list-content" href="detail.html">
                 <img src="images/list/img4.png" class="content-video-list-content-img">
                 <div class="content-video-list-content-des">
                     <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -297,7 +297,7 @@
                         elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                         lorem. Libero mi velit id vitae...</p>
                 </div>
-            </div>
+            </a>
             <div class="content-video-list-xemthem">
                 <a href="#" class="content-video-list-xemthem-a">Xem thêm</a>
             </div>
