--- a/detail.html
+++ b/detail.html
@@ -70,7 +70,7 @@
     <div class="detail-xahoi-title">
         <div class="detail-xahoi-title-left">
             <i class="fa fa-angle-left"></i>
-            <a class="detail-xahoi-title-left-back" href="/" >Quay lại</a>
+            <a class="detail-xahoi-title-left-back" href="index.html" >Quay lại</a>
         </div>
         <div class="detail-xahoi-title-right">
             <p>Chuyên mục: <a class="detail-xahoi-title-right-a color-green-dark">Xã hội</a></p>
