--- a/xahoi.html
+++ b/xahoi.html
@@ -73,7 +73,7 @@
     </div>
 </div>
 <div class="content">
-    <a class="navbar-content" href="/">Tất cả</a>
+    <a class="navbar-content" href="index.html">Tất cả</a>
     <a class="navbar-content color-green-dark" href="xahoi.html" style="border-radius: 25px;color: aliceblue;">Xã hội</a>
     <a class="navbar-content" href="xahoi.html">Nhà đất</a>
     <a class="navbar-content" href="xahoi.html">Đời sống</a>
