--- a/xahoi.html
+++ b/xahoi.html
@@ -80,7 +80,7 @@
     <a class="navbar-content" href="xahoi.html">Video</a>
 </div>
 <div class="content-video-list-xahoi">
-    <div class="content-video-list-content">
+    <a class="content-video-list-content" href="detail.html">
         <img src="images/list/img1.png" class="content-video-list-content-img">
         <div class="content-video-list-content-des">
             <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -96,8 +96,8 @@
                 elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                 lorem. Libero mi velit id vitae...</p>
         </div>
-    </div>
-    <div class="content-video-list-content">
+    </a>
+    <a class="content-video-list-content" href="detail.html">
         <img src="images/list/img2.png" class="content-video-list-content-img">
         <div class="content-video-list-content-des">
             <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -113,8 +113,8 @@
                 elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                 lorem. Libero mi velit id vitae...</p>
         </div>
-    </div>
-    <div class="content-video-list-content">
+    </a>
+    <a class="content-video-list-content" href="detail.html">
         <img src="images/list/img3.png" class="content-video-list-content-img">
         <div class="content-video-list-content-des">
             <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -130,8 +130,8 @@
                 elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                 lorem. Libero mi velit id vitae...</p>
         </div>
-    </div>
-    <div class="content-video-list-content">
+    </a>
+    <a class="content-video-list-content" href="detail.html">
         <img src="images/list/img4.png" class="content-video-list-content-img">
         <div class="content-video-list-content-des">
             <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -147,8 +147,8 @@
                 elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                 lorem. Libero mi velit id vitae...</p>
         </div>
-    </div>
-    <div class="content-video-list-content">
+    </a>
+    <a class="content-video-list-content" href="detail.html">
         <img src="images/xahoi/img1.png" class="content-video-list-content-img">
         <div class="content-video-list-content-des">
             <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -164,8 +164,8 @@
                 elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                 lorem. Libero mi velit id vitae...</p>
         </div>
-    </div>
-    <div class="content-video-list-content">
+    </a>
+    <a class="content-video-list-content" href="detail.html">
         <img src="images/xahoi/img2.png" class="content-video-list-content-img">
         <div class="content-video-list-content-des">
             <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -181,8 +181,8 @@
                 elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                 lorem. Libero mi velit id vitae...</p>
         </div>
-    </div>
-    <div class="content-video-list-content">
+    </a>
+    <a class="content-video-list-content" href="detail.html">
         <img src="images/xahoi/img3.png" class="content-video-list-content-img">
         <div class="content-video-list-content-des">
             <p class="content-video-list-content-des-title">Making a Housing Wage: Where Teachers, First
@@ -198,7 +198,7 @@
                 elit. Sit diam at feugiat purus, interdum porta sed. Ac ut hendrerit enim et scelerisque nullam
                 lorem. Libero mi velit id vitae...</p>
         </div>
-    </div>
+    </a>
     <div class="content-video-list-xemthem">
         <a href="#" class="content-video-list-xemthem-a">Xem thêm</a>
     </div>
