--- a/detail.html
+++ b/detail.html
@@ -80,7 +80,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices iaculis est curabitur arcu augue amet. Nisi augue sit euismod
     </p>
     <div class="detail-xahoi-social">
-        <div class="content-video-list-content-des-information">
+        <div class="content-video-list-content-des-information" id="detail-xahoi-social-div">
             <p class="content-video-list-content-des-information-xahoi">Xã hội</p>
             <p class="content-tintuc-dot"></p>
             <p class="content-video-list-content-des-information-name">Quang Anh Trần</p>
